React Search filter implemented

--- a/views/queue.html
+++ b/views/queue.html
@@ -9,7 +9,11 @@
     <title></title>
 </head>
 <body>
-	<div id="content"></div>
+    <div id="wrapper">
+        <div id="aside"></div>
+        <!-- <aside>hi</aside> -->
+        <div id="content"></div>
+    </div>
     <script src="script.min.js"></script>
 </body>
 </html>
