--- a/dev/main.scss
+++ b/dev/main.scss
@@ -1,1 +1,59 @@
-@import "bourbon/bourbon";
+// @import "bourbon/bourbon";
+
+// $aside-bg: #434752;
+// $aside-width: 250px;
+
+// $content-bg: #f1f5f8;
+
+// @font-face {
+//     font-family: 'Oxygen';
+//     font-weight: 300;
+//     src: url('/fonts/Oxygen-Light.ttf');
+// }
+
+// @font-face {
+//     font-family: 'Oxygen';
+//     font-weight: 400;
+//     src: url('/fonts/Oxygen-Regular.ttf');
+// }
+
+// @font-face {
+//     font-family: 'Oxygen';
+//     font-weight: 700;
+//     src: url('/fonts/Oxygen-Bold.ttf');
+// }
+
+// body  {
+//     font-family: 'Oxygen', sans-serif;
+//     font-weight: 300;
+//     margin: 0 0 0 0;
+//     top: 0;
+//     left: 0;
+//     right: 0;
+//     bottom: 0;
+// }
+
+// #aside {
+//     position: fixed;
+//     float: left;
+//     top: 0;
+//     left: 0;
+//     width: $aside-width;
+//     height: 100%;
+//     overflow-y: scroll;
+//     overflow-x: hidden;
+//     background-color: $aside-bg;
+//     color: white;
+//     &::-webkit-scrollbar {
+//         display: none;
+//     }
+// }
+
+// #content {
+//     position: fixed;
+//     float: left;
+//     background-color: $content-bg;
+//     margin-left: $aside-width;
+//     width: 100%;
+//     height: 100%;
+// }
