--- a/views/queue.html
+++ b/views/queue.html
@@ -4,16 +4,16 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="author" content="Brian Soe, Eduardo Ramirez">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="style.min.css" />
-    <script type="text/javascript" src="libraries.min.js"></script>
-    <title></title>
+    <link rel="stylesheet" type="text/css" href="/style.min.css" />
+    <link href='https://fonts.googleapis.com/css?family=Muli:400,300,300italic,400italic' rel='stylesheet' type='text/css'>
+    <script type="text/javascript" src="/libraries.min.js"></script>
+    <title>HackQ: Sample Hackathon</title>
 </head>
 <body>
     <div id="wrapper">
         <div id="aside"></div>
-        <!-- <aside>hi</aside> -->
         <div id="content"></div>
     </div>
-    <script src="script.min.js"></script>
+    <script src="/script.min.js"></script>
 </body>
 </html>
