--- a/views/layouts/queue.html
+++ b/views/layouts/queue.html
@@ -12,7 +12,9 @@
 <body>
     <div id="wrapper">
         <div id="aside"></div>
-        <div id="content"></div>
+        <div id="content">
+        {{{body}}}
+        </div>
     </div>
     <script src="/script.min.js"></script>
 </body>
