added a generic form to update firebase

--- a/views/add_form.html
+++ b/views/add_form.html
@@ -1,1 +1,5 @@
-<h1>Dummy</h1>
+<div id="add_form">
+    <input type="text" id="requester_name" ref="requester_name" placeholder="Name" /><br/>
+    <input type="text" id="requester_location" ref="requester_location" placeholder="Location" /><br/>
+    <button id="request" class="positive_button">SUBMIT</button><button>CANCEL</button>
+</div>
