--- a/dev/main.scss
+++ b/dev/main.scss
@@ -5,6 +5,8 @@ $aside-width: 275px;
 
 $content-bg: #f1f5f8;
 
+$positive: #65be71;
+$font: 'Muli', sans-serif;
 /*@font-face {
     font-family: 'Oxygen';
     font-weight: 300;
@@ -24,7 +26,7 @@ $content-bg: #f1f5f8;
 }*/
 
 html, body  {
-    font-family: 'Muli', sans-serif;
+    font-family: $font;
     font-weight: 300;
     margin: 0 0 0 0;
     top: 0;
@@ -34,6 +36,10 @@ html, body  {
     height: 100%;
     background-color: $content-bg;
     @include user-select(none);
+}
+
+textarea:focus, input:focus{
+    outline: 0;
 }
 
 #wrapper {
@@ -60,7 +66,8 @@ html, body  {
 
 #content {
     float: left;
-    margin-left: $aside-width;
+    margin-left: $aside-width/2;
+    width: 100%;
     height: 100%;
     @include display(flex);
     @include align-items(center);
@@ -80,7 +87,7 @@ html, body  {
     input {
         background-color: #696c74;
         color: white;
-        font-family: 'Muli', sans-serif;
+        font-family: $font;
         font-size: 14px;
         border: none;
         width: 80%;
@@ -93,7 +100,7 @@ html, body  {
         border: none;
         background-color: transparent;
         color: white;
-        font-family: 'Muli', sans-serif;
+        font-family: $font;
         font-size: 30px;
         margin-left: 15px;
         cursor: pointer;
@@ -148,4 +155,39 @@ html, body  {
     height: 50px;
     border-radius: 100%;
     border: #6b6c75 3px solid;
+}
+
+#add_form {
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
+    input {
+        font-family: $font;
+        font-size: 24px;
+        border: none;
+        background-color: transparent;
+        border-bottom: 2px black solid;
+        height: 45px;
+        width: 60%;
+        min-width: 300px;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    button {
+        font-family: $font;
+        font-size: 18px;
+        border: none;
+        height: 50px;
+        width: 150px;
+        margin: 10px 10px 10px 10px;
+        cursor: pointer;
+    }
+}
+
+.positive_button {
+    background-color: $positive;
+    color: white;
+    font-weight: bold;
 }
