--- a/views/add_form.html
+++ b/views/add_form.html
@@ -1,6 +1,6 @@
 <div id="add_form">
     <input type="text" id="requester_name" ref="requester_name" placeholder="Name" /><br/>
-    <input type="text" id="requester_location" ref="requester_location" placeholder="Location" />
-    <div id="tagWrapperInput"></div>
+    <input type="text" id="requester_location" ref="requester_location" placeholder="Location" /><br/>
+    <textarea id="requester_description" placeholder="Brief Description"></textarea><br/>
     <button id="request" class="positive_button">SUBMIT</button><button>CANCEL</button>
 </div>
