Facebook OAuth integrated. NEXT: User based UI

--- a/views/add_form.html
+++ b/views/add_form.html
@@ -1,4 +1,5 @@
 <div id="add_form">
+	<a id="logout_link">Logout</a><br/>
     <input type="text" id="requester_name" ref="requester_name" placeholder="Name" /><br/>
     <input type="text" id="requester_location" ref="requester_location" placeholder="Location" /><br/>
     <textarea id="requester_description" placeholder="Brief Description"></textarea><br/>
