--- a/views/index.html
+++ b/views/index.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta name="author" content="Brian Soe, Eduardo Ramirez">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="style.min.css" />
-    <script type="text/javascript" src="libraries.min.js"></script>
-    <title></title>
-</head>
-<body>
-	<div id="content"></div>
-    <script src="script.min.js"></script>
-</body>
-</html>
+<a id="login_link">Login with Facebook</a>
