--- a/views/layouts/queue.html
+++ b/views/layouts/queue.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/style.min.css" />
     <script type="text/javascript" src="/libraries.min.js"></script>
-    <title>HackQ: {{name}}</title>
+    <title>HackQ: {{hackathon.name}}</title>
 </head>
 <body>
     <div id="wrapper">
