--- a/views/add_form.html
+++ b/views/add_form.html
@@ -1,6 +1,9 @@
 <div id="add_form">
-	<a id="logout_link">Logout</a><br/>
-    <input type="text" id="requester_name" ref="requester_name" placeholder="Name" /><br/>
+    <header>
+        <div id="logo">{{hackathon.name}}</div>
+    </header>
+    {{#if user}}<p id="pid" hidden>{{user.picture}}</p>{{/if}}
+    <input type="text" id="requester_name" ref="requester_name" {{#if user}}value="{{user.name}}" disabled{{else}}placeholder="Name"{{/if}}/><br/>
     <input type="text" id="requester_location" ref="requester_location" placeholder="Location" /><br/>
     <textarea id="requester_description" placeholder="Brief Description"></textarea><br/>
     <button id="request" class="positive_button">SUBMIT</button><button>CANCEL</button>
