--- a/views/queue.html
+++ b/views/queue.html
@@ -1,4 +1,6 @@
-<div id="add_form">
+<div id="aside"></div>
+<div id="content">
+  <div id="add_form">
     <header>
         <div id="logo">{{hackathon.name}}</div>
     </header>
@@ -7,4 +9,5 @@
     <input type="text" id="requester_location" ref="requester_location" placeholder="Location" /><br/>
     <textarea id="requester_description" placeholder="Brief Description"></textarea><br/>
     <button id="request" class="positive_button">SUBMIT</button><button>CANCEL</button>
+  </div>
 </div>
